--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04, macos-12, macos-13]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-13]
 
     steps:
     - name: Install CppUTest
