i think im doing this right

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "Build",
       "type": "shell",
-      "command": "make build/home-assistant-bridge_tests"
+      "command": "make test"
     }
   ]
 }
